--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMn1qxrzynUQEsAi/i+svwx",
+      "authorship_tag": "ABX9TyOa9LXE9TomhT5y5g3a0gLH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7qRfALfQITG8",
+        "outputId": "6cac1970-0ed4-415a-884e-0bdd8403455f"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite valor em polegalas: 2\n",
+            "50.8\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Hashtag é comentário na parte onde eu programo\n",
+        "P = float(input(\"Digite valor em polegalas: \"))\n",
+        "mm = P * 25.4\n",
+        "print(mm)\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Exercício 5\n",
         "\n",
         "**Ler Raio**\n",
+        "\n",
         "**Calcular Volume**\n",
+        "\n",
         "**Exibir Volume**\n"
       ],
       "metadata": {
@@ -95,38 +124,55 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Exercício 6"
+      ],
+      "metadata": {
+        "id": "cnimv_NXWT5Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Receber um ângulo em graus**\n",
+        "\n",
+        "**Converter para radiano**\n",
+        "\n",
+        "**Exibir resultado**\n"
+      ],
+      "metadata": {
+        "id": "9JWZzMKTMSMn"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "source": [
+        "from math import pi\n",
+        "print(\"Programa para converter graus em radiano\")\n",
+        "graus = float(input(\"Digite valor em graus: \"))\n",
+        "radiano = graus * pi/180\n",
+        "print(\"Valor em radiano = \", radiano)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7qRfALfQITG8",
-        "outputId": "6cac1970-0ed4-415a-884e-0bdd8403455f"
+        "id": "T4WNYfBGXVRq",
+        "outputId": "f7a3a427-8bfd-4946-d15b-a8c172648d10"
       },
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite valor em polegalas: 2\n",
-            "50.8\n"
+            "Programa para converter graus em radiano\n",
+            "Digite valor em graus: 45\n",
+            "Valor em radiano =  0.7853981633974483\n"
           ]
         }
-      ],
-      "source": [
-        "#Hashtag é comentário na parte onde eu programo\n",
-        "P = float(input(\"Digite valor em polegalas: \"))\n",
-        "mm = P * 25.4\n",
-        "print(mm)\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "9JWZzMKTMSMn"
-      }
     }
   ]
 }
